--- a/source/conf.py.org
+++ b/source/conf.py.org
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 #
-# manual documentation build configuration file, created by
-# sphinx-quickstart on Thu Jul 20 07:45:44 2017.
+# test documentation build configuration file, created by
+# sphinx-quickstart on Sun Jul 23 13:50:05 2017.
 #
 # This file is execfile()d with the current directory set to its
 # containing dir.
@@ -16,8 +16,8 @@
 # add these directories to sys.path here. If the directory is relative to the
 # documentation root, use os.path.abspath to make it absolute, like shown here.
 #
-#import os
-#import sys
+# import os
+# import sys
 # sys.path.insert(0, os.path.abspath('.'))
 
 
@@ -30,7 +30,7 @@
 # Add any Sphinx extension module names here, as strings. They can be
 # extensions coming with Sphinx (named 'sphinx.ext.*') or your custom
 # ones.
-extensions = ['sphinx.ext.githubpages']
+extensions = []
 
 # Add any paths that contain templates here, relative to this directory.
 templates_path = ['_templates']
@@ -45,9 +45,9 @@ source_suffix = '.txt'
 master_doc = 'index'
 
 # General information about the project.
-project = u'manual'
-copyright = u'2017, HN'
-author = u'HN'
+project = u'test'
+copyright = u'2017, test'
+author = u'test'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
@@ -68,7 +68,7 @@ language = 'ja'
 # List of patterns, relative to source directory, that match files and
 # directories to ignore when looking for source files.
 # This patterns also effect to html_static_path and html_extra_path
-exclude_patterns = []
+exclude_patterns = ['_build', 'Thumbs.db', '.DS_Store']
 
 # The name of the Pygments (syntax highlighting) style to use.
 pygments_style = 'sphinx'
@@ -81,20 +81,8 @@ todo_include_todos = False
 
 # The theme to use for HTML and HTML Help pages.  See the documentation for
 # a list of builtin themes.
-
-html_theme = 'bizstyle'
-#html_theme = 'sphinxjp'
-#html_theme = 'sphinx_rtd_theme'
-#html_theme = 'default'
-#html_theme = 'basic'
-#html_theme = 'sphinxdoc'
-#html_theme = 'scrolls'
-#html_theme = 'agogo'
-#html_theme = 'nature'
-#html_theme = 'pyramid'
-#html_theme = 'haiku'
-#html_theme = 'traditional'
-#html_theme = 'epub'
+#
+html_theme = 'alabaster'
 
 
 # Theme options are theme-specific and customize the look and feel of a theme
@@ -113,21 +101,21 @@ html_static_path = ['_static']
 #
 # This is required for the alabaster theme
 # refs: http://alabaster.readthedocs.io/en/latest/installation.html#sidebars
-#html_sidebars = {
-#    '**': [
-#        'about.html',
-#        'navigation.html',
-#        'relations.html',  # needs 'show_related': True theme option to display
-#        'searchbox.html',
-#        'donate.html',
-#    ]
-#}
+html_sidebars = {
+    '**': [
+        'about.html',
+        'navigation.html',
+        'relations.html',  # needs 'show_related': True theme option to display
+        'searchbox.html',
+        'donate.html',
+    ]
+}
 
 
 # -- Options for HTMLHelp output ------------------------------------------
 
 # Output file base name for HTML help builder.
-htmlhelp_basename = 'manualdoc'
+htmlhelp_basename = 'testdoc'
 
 
 # -- Options for LaTeX output ---------------------------------------------
@@ -154,8 +142,8 @@ latex_elements = {
 # (source start file, target name, title,
 #  author, documentclass [howto, manual, or own class]).
 latex_documents = [
-    (master_doc, 'manual.tex', u'manual Documentation',
-     u'HN', 'manual'),
+    (master_doc, 'test.tex', u'test Documentation',
+     u'test', 'manual'),
 ]
 
 
@@ -164,7 +152,7 @@ latex_documents = [
 # One entry per manual page. List of tuples
 # (source start file, name, description, authors, manual section).
 man_pages = [
-    (master_doc, 'manual', u'manual Documentation',
+    (master_doc, 'test', u'test Documentation',
      [author], 1)
 ]
 
@@ -175,8 +163,8 @@ man_pages = [
 # (source start file, target name, title, author,
 #  dir menu entry, description, category)
 texinfo_documents = [
-    (master_doc, 'manual', u'manual Documentation',
-     author, 'manual', 'One line description of project.',
+    (master_doc, 'test', u'test Documentation',
+     author, 'test', 'One line description of project.',
      'Miscellaneous'),
 ]
 
